@@ -59,19 +59,21 @@ plot.igraph <- function(x,
   layout             <- params("plot", "layout")
   margin             <- params("plot", "margin")
   margin <- rep(margin, length=4)
+  rescale            <- params("plot", "rescale")
 
   # the new style parameters can't do this yet
   arrow.mode         <- i.get.arrow.mode(graph, arrow.mode)
 
   # create the plot
   maxv <- max(vertex.size)
-  xlim <- c(xlim[1]-margin[2]-maxv, xlim[2]+margin[4]+maxv)
-  ylim <- c(ylim[1]-margin[1]-maxv, ylim[2]+margin[3]+maxv)
-  plot(0, 0, type="n", xlab=xlab, ylab=ylab, asp=1, xlim=xlim, ylim=ylim,
+  if (rescale) {
+    # norm layout to (-1, 1)
+    layout <- i.layout.norm(layout, -1, 1, -1, 1)
+    xlim <- c(xlim[1]-margin[2]-maxv, xlim[2]+margin[4]+maxv)
+    ylim <- c(ylim[1]-margin[1]-maxv, ylim[2]+margin[3]+maxv)
+  }
+  plot(0, 0, type="n", xlab=xlab, ylab=ylab, xlim=xlim, ylim=ylim,
        axes=axes)
-
-  # norm layout to (-1, 1)
-  layout <- i.layout.norm(layout, -1, 1, -1, 1)
   
   # add the edges
   el <- get.edgelist(graph, names=FALSE)
@@ -431,13 +433,16 @@ rglplot.igraph <- function(x, ...) {
   arrow.size <- params("edge","arrow.size")
   
   layout <- params("plot", "layout")
+  rescale <- params("plot", "rescale")
 
   # the new style parameters can't do this yet
   arrow.mode         <- i.get.arrow.mode(graph, arrow.mode)
   
   # norm layout to (-1, 1)
   if (ncol(layout)==2) { layout <- cbind(layout, 0) }
-  layout <- i.layout.norm(layout, -1, 1, -1, 1, -1, 1)
+  if (rescale) {
+    layout <- i.layout.norm(layout, -1, 1, -1, 1, -1, 1)
+  }
   
   # add the edges, the loops are handled separately
   el <- get.edgelist(graph, names=FALSE)
